[gd_scene load_steps=14 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/act-sign/sign-rotating-sheet.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/act-sign/sign-base.png" type="Texture" id=2]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/act-sign/faces-sheet.png" type="Texture" id=3]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/act-sign/sign-robotnik.png" type="Texture" id=4]
[ext_resource path="res://game-assets/game-scripts/general-scripts/act-sign.gd" type="Script" id=5]
[ext_resource path="res://game-assets/audio/sfx/sign-post.wav" type="AudioStream" id=6]
[ext_resource path="res://game-assets/game-scripts/player-scripts/audio-player.gd" type="Script" id=7]
[ext_resource path="res://game-assets/audio/sfx/twinkle.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 1 )

[sub_resource type="Animation" id=3]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("./Visual/Sign:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.9, 2, 2.9, 3, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("./Visual/Faces:frame_coors:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("./Visual/Faces:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ), Vector2( 0, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("./Visual/Faces:position")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -4, 0 ), Vector2( 0, 0 ), Vector2( 4, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("./Visual/Faces:z_index")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("./Visual/Faces:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("./Visual/Sign:frame_coords:x")
tracks/6/interp = 0
tracks/6/loop_wrap = false
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 9.0, 8.0, 7.0, 6.0, 5.0, 4.0, 3.0, 2.0, 1.0, 0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 9.0, 8.0, 7.0, 6.0, 5.0, 4.0, 3.0, 2.0, 1.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("./Visual/Robotnik:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("./Visual/Robotnik:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = false
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("./Visual/Robotnik:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 0 ), Vector2( 2.4, 0 ), Vector2( -4, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("..")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_stop"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("./Visual/Sign:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("./Visual/Faces:frame_coords:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("./Visual/Faces:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("./Visual/Robotnik:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("./Visual/Robotnik:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("./Visual/Faces:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("./Visual/Faces:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("./Visual/Robotnik:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Sign:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Robotnik:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Faces:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visual/Faces:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visual/Faces:frame_coords:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1.2 ),
"transitions": PoolRealArray( 2, 1, 0.5, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 5.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visual/Faces:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visual/Faces:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Sign" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 5 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
shape = SubResource( 2 )

[node name="Animation" type="Node2D" parent="."]

[node name="Visual" type="Node2D" parent="Animation"]

[node name="Sign" type="Sprite" parent="Animation/Visual"]
texture = ExtResource( 1 )
hframes = 11
vframes = 5

[node name="Robotnik" type="Sprite" parent="Animation/Visual"]
texture = ExtResource( 4 )

[node name="Faces" type="Sprite" parent="Animation/Visual"]
visible = false
z_index = -1
texture = ExtResource( 3 )
hframes = 5
vframes = 5

[node name="sign-base" type="Sprite" parent="Animation/Visual"]
position = Vector2( 0, 7 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
autoplay = "Stop"
playback_speed = 15.0
anims/Rotating = SubResource( 3 )
anims/Stop = SubResource( 4 )
anims/finished_animation = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="VictoryTimer" type="Timer" parent="."]

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 7 )
audios = {
"sign-post": ExtResource( 6 ),
"twinkle": ExtResource( 8 )
}

[node name="SparkleTimer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="body_shape_entered" from="Area" to="." method="_on_Area_body_shape_entered"]
[connection signal="timeout" from="VictoryTimer" to="." method="_on_VictoryTimer_timeout"]
[connection signal="timeout" from="SparkleTimer" to="." method="_on_SparkleTimer_timeout"]
